<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/green"
        app:cardBackgroundColor="@color/green"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="Name"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
            <!-- alhaalla piilotettu -->
            <LinearLayout
                android:id="@+id/hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/id2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/BusinessId"
                            app:layout_constraintTop_toBottomOf="@id/title" />

                        <TextView
                            android:id="@+id/id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:text="Ytunnus"
                            app:layout_constraintTop_toBottomOf="@id/title" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/companyForm2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/Companyform"
                            app:layout_constraintTop_toBottomOf="@id/title" />

                        <TextView
                            android:id="@+id/companyForm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:text="Company Form"
                            app:layout_constraintTop_toBottomOf="@id/title" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/registrationDate2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/Registrationdate"
                            app:layout_constraintTop_toBottomOf="@id/title" />

                        <TextView
                            android:id="@+id/registrationDate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:text="Registration date"
                            app:layout_constraintTop_toBottomOf="@id/title" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>

